# vibeview

./: .dockerignore  Dockerfile  README.md  draino-web-mockup.html  pyproject.toml
.github/workflows/: build-image.yml
charts/draino/: Chart.yaml  README.md  values.yaml
charts/draino/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  gateway.yaml  httproute.yaml  ingress.yaml  node-agent-daemonset.yaml  node-agent-secret.yaml  node-agent-service.yaml  rbac.yaml  (+2 more)
deploy/genestack/: README.md  draino.yaml  values.yaml
docs/: clone-vm-mockup.html  global-search-plan.md  live-reporting-roadmap.md  neutron-joins-mockup.html  node-local-reboot-agent.md  operator-console-suggestions.md  operator-feature-roadmap.md  progressive-node-loading-plan.md  project-instances-mockup.html  risk-acceptance-memo.md  scaling-plan.md  stress-test-design.md  ui-consistency-rubric.md
docs/mockups/: api-issues-overlay-mockup.html  cinder-retype-blocked-mockup.html  cinder-retype-mockup.html  cinder-retype-safe-now-mockup.html  cinder-retype-safe-window-mockup.html  k8s-node-health-density-mockup.html  k8s-pvc-workload-report-mockup.html  k8s-rollout-health-mockup.html  load-balancers-mockup.html  login-mockup.html  networking-split-mockup.html  node-network-mockup.html  nova-activity-capacity-snapshot-mockup.html  placement-risk-report-mockup.html  reports-mockup.html  security-groups-mockup.html  session-expired-mockup.html  stress-test-mockup.html  stress-test-workspace-mockup.html  vcenter-mockup.html
draino/: __main__.py  app.py  audit.py  logging_utils.py  models.py  node_agent.py  node_agent_app.py  node_agent_client.py  node_agent_common.py  node_agent_host_ops.py  node_agent_metrics_ops.py  reboot.py  release.py  render.py  screens.py  time_utils.py  worker.py  workflows_evacuate.py  workflows_maintenance.py
draino/operations/: k8s_inventory_core.py  k8s_inventory_ops.py  k8s_inventory_resources.py  k8s_inventory_rollout.py  k8s_inventory_storage.py  k8s_inventory_utils.py  k8s_inventory_workloads.py  k8s_ops.py  node_inventory_ops.py  openstack_ops.py  ovn_ops.py
draino/web/: __init__.py  app.py  auth_builders.py  inventory.py  inventory_actions.py  inventory_refresh.py  latency.py  report_helpers.py  resource_helpers.py  serialise.py  server.py  session.py  stress_helpers.py  ws.py
tests/: conftest.py  test_audit.py  test_k8s_ops.py  test_node_agent_detail.py  test_reboot.py  test_web_server.py  test_worker.py
tests/web/: test_auth_api.py  test_inventory.py  test_nodes_api.py  test_reports_api.py  test_resources_api.py  test_runtime_api.py  test_server_helpers.py  test_stress_api.py
(+43 files in other folders)
