[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draino"
version = "0.1.0"
description = "TUI for draining OpenStack hypervisors and Kubernetes nodes before a reboot"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.52.0",
    "kubernetes>=28.1.0",
    "openstacksdk>=2.0.0",
]

[project.scripts]
draino = "draino.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["draino"]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "textual-dev",
]
web = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
include = [
    "draino/operations/k8s_ops.py",
    "draino/operations/openstack_ops.py",
    "draino/web/server.py",
    "draino/worker.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["B", "E9", "F", "I"]
